2007-05-14  Adar Wesley <adarw@mainsoft.com>

	* XmlSchemaExporter.cs: added missing overload for method ExportAnyType.

	* XmlSchemas.cs: added missing methods Add, AddReference, Contains,
	GetSchemas.

	* XmlSerializationReader.cs: added missing method AddReaderCount.

	* XmlSerializationWriter.cs: added missing overload WriteStartElement.

	* XmlSerializer.cs: added missing overload Serialize.

2007-04-25  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlSchemas.cs : 1.1-only duplicate check does not seem to be
	  required. This is also a workaround for 1.x ws proxy generation.

2007-04-20  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTypeMapping.cs, ReflectionHelper.cs,
	  XmlSerializationReaderInterpreter.cs, SerializationCodeGenerator.cs:
	  support instantiation by private constructor.

2007-04-19  Konstantin Triger <kostat@mainsoft.com>

	* XmlSchemaExporter.cs: do not export twice simple types.

2007-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs : forgot NET_2_0.

2007-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs : in get_ListItemTypeData(), check generic ICollection
	  as well as non-generic one. Fixed bug #81341. Though the type check
	  looks like an aggregation of bugfix hacks and there should be some
	  kind of sane refactoring, to throw best-suited errors.

2007-02-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs : fix wrong name comparison:
	  Name->LocalName. Add hacky TARGET_JVM support (hope it is harmless).

2007-02-20  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs,
	  XmlSerializationReaderInterpreter.cs :
	  Handle attributes on non-empty elements as well. Fixed bug #80131.

2007-02-20  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs,
	  XmlSerializationReaderInterpreter.cs :
	  Handle empty root element.
	  Read out attribute parameters. To do that, split attribute
	  reader part from ReadMembers(), as it isn't invoked when the